--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -3,8 +3,8 @@ name: Build and Push Docker Image to Docker Hub
 on:
   push:
     branches: [ "test", "main" ]
-  pull_request:
-    branches: [ "test", "main" ]
+  # pull_request:
+  #   branches: [ "test", "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
