--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ markdown-it-py==3.0.0 ; python_version >= '3.8'
 markupsafe==2.1.3 ; python_version >= '3.7'
 mdurl==0.1.2 ; python_version >= '3.7'
 natsort==8.4.0
-numpy==1.25.0 ; python_version >= '3.9'
+openpyxl==3.1.2
 packaging==23.1 ; python_version >= '3.7'
 pandas==2.0.3 ; python_version >= '3.8'
 pillow==9.5.0 ; python_version >= '3.7'
