--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -84,37 +84,35 @@ jobs:
 
   merge:
     runs-on: ubuntu-latest
-      needs:
-        - build
+      needs: build
       steps:
-        -
-          name: Download digests
+        - name: Download digests
           uses: actions/download-artifact@v3
           with:
             name: digests
             path: /tmp/digests
-        -
-          name: Set up Docker Buildx
+
+        - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
-        -
-          name: Docker meta
+
+        - name: Docker meta
           id: meta
           uses: docker/metadata-action@v4
           with:
             images: ${{ env.REGISTRY_IMAGE }}
-        -
-          name: Login to Docker Hub
+
+        - name: Login to Docker Hub
           uses: docker/login-action@v2
           with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
-        -
-          name: Create manifest list and push
+
+        - name: Create manifest list and push
           working-directory: /tmp/digests
           run: |
             docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
               $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
-        -
-          name: Inspect image
+              
+        - name: Inspect image
           run: |
             docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
