--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -6,12 +6,13 @@ on:
   # pull_request:
   #   branches: [ "test", "main" ]
 
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: docker.io
+env: 
   REGISTRY_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+  # Use docker.io for Docker Hub if empty
+  # REGISTRY: docker.io
+  
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  # IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   #push_to_registry:
