--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -6,13 +6,12 @@ on:
   # pull_request:
   #   branches: [ "test", "main" ]
 
-env: 
-  REGISTRY_IMAGE: janeswh/ca_imaging_analysis
+env:   
   # Use docker.io for Docker Hub if empty
-  # REGISTRY: docker.io
-  
+  REGISTRY: docker.io  
   # github.repository as <account>/<repo>
-  # IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
 jobs:
   #push_to_registry:
