--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image to Docker Hub
 
 on:
   push:
-    branches: [ "test", "main" ]
+    branches: [ "main" ]
   # pull_request:
   #   branches: [ "test", "main" ]
 
