--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,53 @@
--i https://pypi.org/simple
-altair==5.0.1 ; python_version >= '3.7'
-attrs==23.1.0 ; python_version >= '3.7'
-blinker==1.6.2 ; python_version >= '3.7'
-cachetools==5.3.1 ; python_version >= '3.7'
-certifi==2023.5.7 ; python_version >= '3.6'
-charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
-click==8.1.3 ; python_version >= '3.7'
-decorator==5.1.1 ; python_version >= '3.5'
-gitdb==4.0.10 ; python_version >= '3.7'
-gitpython==3.1.31 ; python_version >= '3.7'
-idna==3.4 ; python_version >= '3.5'
-importlib-metadata==6.7.0 ; python_version >= '3.7'
-jinja2==3.1.2 ; python_version >= '3.7'
-jsonschema==4.17.3 ; python_version >= '3.7'
-markdown-it-py==3.0.0 ; python_version >= '3.8'
-markupsafe==2.1.3 ; python_version >= '3.7'
-mdurl==0.1.2 ; python_version >= '3.7'
+altair==5.0.1
+attrs==23.1.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+decorator==5.1.1
+et-xmlfile==1.1.0
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
+importlib-metadata==6.7.0
+Jinja2==3.1.2
+jsonschema==4.17.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
 natsort==8.4.0
-numpy==1.25.0 ; python_version >= '3.9'
+numpy==1.25.0
 openpyxl==3.1.2
-packaging==23.1 ; python_version >= '3.7'
-pandas==2.0.3 ; python_version >= '3.8'
-pillow==9.5.0 ; python_version >= '3.7'
+packaging==23.1
+pandas==2.0.3
+Pillow==9.5.0
 plotly==5.15.0
-protobuf==4.23.3 ; python_version >= '3.7'
-pyarrow==12.0.1 ; python_version >= '3.7'
-pydeck==0.8.1b0 ; python_version >= '3.7'
-pygments==2.15.1 ; python_version >= '3.7'
-pympler==1.0.1 ; python_version >= '3.6'
-pyrsistent==0.19.3 ; python_version >= '3.7'
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+protobuf==4.23.3
+pyarrow==12.0.1
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
 pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-requests==2.31.0 ; python_version >= '3.7'
-rich==13.4.2 ; python_full_version >= '3.7.0'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-smmap==5.0.0 ; python_version >= '3.6'
+pytz-deprecation-shim==0.1.0.post0
+requests==2.31.0
+rich==13.4.2
+six==1.16.0
+smmap==5.0.0
 st-pages==0.4.1
 stqdm==0.0.5
-streamlit==1.24.0
-tenacity==8.2.2 ; python_version >= '3.6'
-toml==0.10.2 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-toolz==0.12.0 ; python_version >= '3.5'
-tornado==6.3.2 ; python_version >= '3.8'
-tqdm==4.65.0 ; python_version >= '3.7'
-typing-extensions==4.7.0 ; python_version >= '3.7'
-tzdata==2023.3 ; python_version >= '2'
-tzlocal==4.3.1 ; python_version >= '3.7'
-urllib3==2.0.3 ; python_version >= '3.7'
-validators==0.20.0 ; python_version >= '3.4'
-watchdog==3.0.0 ; platform_system != 'Darwin'
-zipp==3.15.0 ; python_version >= '3.7'
+streamlit==1.27.2
+tenacity==8.2.2
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+typing_extensions==4.7.0
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==2.0.3
+validators==0.20.0
+watchdog==3.0.0
+zipp==3.15.0
